@@ -4,6 +4,12 @@
 #include <RcppArmadillo.h>
 
 /*------------------------------------------------------------------------/
+/ Categorical Distribution                                                /
+/------------------------------------------------------------------------*/
+
+RcppExport SEXP rcat(SEXP P);
+
+/*------------------------------------------------------------------------/
 / Half-Cauchy Distribution                                                /
 /------------------------------------------------------------------------*/
 
